--- a/index.html
+++ b/index.html
@@ -94,8 +94,13 @@
            </div>
        </div>-->
    </section>
-
-   <section class="section-meals">
+   <section class="section-outlet">
+       <div class="row">
+           <p class="long-text">"Our outlet designed with simplicity and elegance where one can have pleasant time with our high energy food cooked with love and joy at spiritual dhaam Vrindavan ."
+           </p>
+       </div>
+   </section>
+   <!--<section class="section-meals">
        <ul class="meals-showcase clearfix">
            <li>
                <figure class="meal-photo">
@@ -140,10 +145,10 @@
                </figure>
            </li>
        </ul>
-   </section>
+   </section>-->
    <section class="section-steps" id="works">
       <div class="row">
-          <h2>How it works &mdash; Simple as 1, 2, 3</h2>
+          <h2>Place Your Order &mdash; Simple as 1, 2, 3</h2>
       </div>
       <div class="row">
           <div class="col span-1-of-2 steps-box">
@@ -163,12 +168,12 @@
                   <p>Enjoy your meal after less than 20 minutes. See you the next time!</p>
               </div>
 
-              <a href="#" class="btn-app"><img src="Resources/img/download-app.svg" alt="App Store Button"></a>
+              <!--<a href="#" class="btn-app"><img src="Resources/img/download-app.svg" alt="App Store Button"></a>-->
               <a href="#" class="btn-app"><img src="Resources/img/download-app-android.png" alt="App Play Store Button"></a>
           </div>
       </div>
    </section>
-   <section class="section-cities" id="cities">
+   <!--<section class="section-cities" id="cities">
        <div class="row">
            <h2>We're currently in these cities</h2>
        </div>
@@ -238,7 +243,7 @@
               </div>
            </div>
        </div>
-   </section>
+   </section>-->
    <section class="section-testimonials">
        <div class="row">
            <h2>Our customers can't live without us</h2>
@@ -264,7 +269,7 @@
            </div>
        </div>
    </section>
-   <section class="section-plans js-section-plans" id="plans">
+   <!--<section class="section-plans js-section-plans" id="plans">
        <div class="row">
            <h2>
                Start eating healthy today
@@ -332,7 +337,7 @@
                </div>
            </div>
        </div>
-   </section>
+   </section>-->
    <section class="section-form">
        <div class="row">
            <h2>We're happy to hear from you</h2>
