Added new image

--- a/index.html
+++ b/index.html
@@ -157,15 +157,15 @@
           <div class="col span-1-of-2 steps-box">
               <div class="works-step">
                   <div>1</div>
-                  <p>Choose the subscription plan that best fits your needs and sign up today.</p>
+                  <p>Download our mobile app on Play Store.</p>
               </div>
               <div class="works-step">
                   <div>2</div>
-                  <p>Order your delicious meal using our mobile app or website. Or you can even call us!</p>
+                  <p>Order your delicious meal using our mobile app.</p>
               </div>
               <div class="works-step">
                   <div>3</div>
-                  <p>Enjoy your meal after less than 20 minutes. See you the next time!</p>
+                  <p>Enjoy your meal.</p>
               </div>
 
               <!--<a href="#" class="btn-app"><img src="Resources/img/download-app.svg" alt="App Store Button"></a>-->
