--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
               <img class="logo-black" src="Resources/img/po-logo.png" alt="Omnifood Logo">
               <ul class="main-nav js--main-nav">
                   <li><a href="index.html">Home</a></li>
-                  <li><a href="#About">About</a></li>
-                  <li><a href="#Contact">Contact</a></li>
+                  <li><a href="about.html">About</a></li>
+                  <li><a href="contact.html">Contact</a></li>
                   <li><a href="#Menu">Menu</a></li>
               </ul>
               <a class="mobile-nav-icon js--nav-icon"><i class="icon ion-md-menu"></i></a>
