--- a/contact.html
+++ b/contact.html
@@ -58,81 +58,22 @@
    <section class="section-features js-section-features" id="features">
        <div class="row">
            <h2>Address</h2>
-           <div class="col span-1-of-2">
-
-           </div>
-           <div class="col span-1-of-2">
-
-           </div>
+           <p style="text-align: center;">
+             Address :- Besides Chitrakut Ashram, Chaitanya Vihar, Phase-1 Vrindavan-281121 (Mathura) U.P., India<br><br>Phone :- 07300796960 , 07599776600
+             <br><br>
+             Email-Id :- pizzaolive.in@gmail.com
+             <br><br>
+              Website :- www.pizzaolive.in
+           </p>
        </div>
 
    </section>
    <section>
      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14146.9620681403!2d77.6752817!3d27.5705625!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xff7062e109428499!2sPizza+Olive!5e0!3m2!1sen!2sin!4v1557822142760!5m2!1sen!2sin" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
    </section>
-   <section class="section-form">
-       <div class="row">
-           <h2>We're happy to hear from you</h2>
-           <div class="row">
-               <form action="#" method="post" class="contact-form">
-                  <div class="row">
-                      <div class="col span-1-of-3">
-                          <label for="name">Name</label>
-                      </div>
-                      <div class="col span-2-of-3">
-                          <input type="text" name="name" id="name" placeholder="Your Name" required>
-                      </div>
-                  </div>
-                  <div class="row">
-                      <div class="col span-1-of-3">
-                          <label for="email">Email</label>
-                      </div>
-                      <div class="col span-2-of-3">
-                          <input type="email" name="email" id="email" placeholder="Your Email" required>
-                      </div>
-                  </div>
-                  <div class="row">
-                      <div class="col span-1-of-3">
-                          <label for="find-us">How did you find us?</label>
-                      </div>
-                      <div class="col span-2-of-3">
-                          <select name="find-us" id="find-us">
-                              <option value="friends">Friends</option>
-                              <option value="search" selected>Search Engine</option>
-                              <option value="ad">Advertisement</option>
-                              <option value="others">Others</option>
-                          </select>
-                      </div>
-                  </div>
-                  <!--<div class="row">
-                      <div class="col span-1-of-3">
-                          <label>Newsletter</label>
-                      </div>
-                      <div class="col span-2-of-3">
-                          <input type="checkbox" name="news" id="news" checked> Yes, Please
-                      </div>
-                  </div>-->
-                  <div class="row">
-                      <div class="col span-1-of-3">
-                          <label>Drop us a line</label>
-                      </div>
-                      <div class="col span-1-of-3">
-                          <textarea name="message" id="message" rows="2" placeholder="Your Message"></textarea>
-                      </div>
-                  </div>
-                  <div class="row">
-                      <div class="col span-1-of-3">
-                          <label>&nbsp;</label>
-                      </div>
-                      <div class="col span-2-of-3">
-                          <input type="submit" value="Sent it!">
-                      </div>
-                  </div>
-               </form>
-           </div>
-       </div>
+   <section class="contact-form">
+     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSePWyWVAl8aH-Np_Y3PG_PN5JK1tF1GAGbej7SMycomJ_n-eQ/viewform?embedded=true" width="100%" height="891" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
    </section>
-
 
    <footer>
        <div class="row">
