--- a/menu.html
+++ b/menu.html
@@ -51,7 +51,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                  <li><a href="#Menu">Menu</a></li>
+                  <li><a href="menu.html">Menu</a></li>
               </ul>
               <a class="mobile-nav-icon js--nav-icon"><i class="icon ion-md-menu"></i></a>
           </div>
@@ -1303,9 +1303,9 @@
        <div class="row">
            <div class="col span-1-of-2">
                <ul class="footer-nav">
-                   <li><a href="#">About us</a></li>
-                   <li><a href="#">Contact</a></li>
-                   <li><a href="#">Menu</a></li>
+                   <li><a href="about.html">About us</a></li>
+                   <li><a href="contact.html">Contact</a></li>
+                   <li><a href="menu.html">Menu</a></li>
                </ul>
            </div>
            <div class="col span-1-of-2">
